Update roles for various components
This have been lifted from [1] without much modification (apart from the
fact that we create one role per component and they seem to have two
roles for certain components).

[1]: https://github.com/kubernetes/test-infra/tree/ecbeba384c07da9256bb3fe6a61fa576d8408a4e/prow/cluster

--- a/prow/sinker/role.yaml
+++ b/prow/sinker/role.yaml
@@ -12,9 +12,27 @@ rules:
       - delete
       - list
   - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    resourceNames:
+      - prow-sinker-leaderlock
+    verbs:
+      - get
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+      - events
+    verbs:
+      - create
+  - apiGroups:
       - "prow.k8s.io"
     resources:
       - prowjobs
     verbs:
       - delete
       - list
+      - watch
+      - get
