--- a/prow/deck/role.yaml
+++ b/prow/deck/role.yaml
@@ -17,4 +17,6 @@ rules:
     verbs:
       - get
       - list
+      - watch
+      # Required when deck runs with `--rerun-creates-job=true`
       - create
