--- a/config/plugins.yaml
+++ b/config/plugins.yaml
@@ -50,6 +50,7 @@ plugins:
   pusher/quack: *default_plugins
   pusher/testing: *default_plugins
   pusher/wave: *default_plugins
+  pusher/faros: *default_plugins
 
 external_plugins:
   pusher/elasticsearch-docker: *default_external_plugins
